# netmupdf

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.codex/: hooks.json
.github/workflows/: ci.yml
src/netmupdf/: __init__.py  cli.py  core.py
src/netmupdf/profiles/: __init__.py  base.py  common.py  fitelnet.py  generic.py  srs.py
tests/: test_pdf.py
