[project]
name = "netmupdf"
version = "0.2.0"
description = "Convert network device PDF manuals to Markdown using PyMuPDF4LLM"
readme = "README.md"
authors = [
    { name = "caribouHY", email = "59246671+caribouHY@users.noreply.github.com" }
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["pdf", "markdown", "network", "manual", "pymupdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "pymupdf4llm>=1.27.2.3",
]

[project.urls]
Homepage = "https://github.com/caribouHY/netmupdf"
Repository = "https://github.com/caribouHY/netmupdf"
Issues = "https://github.com/caribouHY/netmupdf/issues"

[project.scripts]
netmupdf = "netmupdf.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "twine>=6.2.0",
    "tox-uv>=1.35.2",
    "ty>=0.0.44",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.tox]
env_list = ["3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
description = "Run tests with Python {base_python}"
deps = ["pytest>=9.0.3"]
commands = [["pytest", { replace = "posargs", default = [], extend = true }]]
